newclay/test/Compiler/Propagation/Fail/WithCorrectLocationAfterUTF8Sequence1/main.clay
main() {
    var x = "éééé";
    return x + x;
}
